macerror.txt
/Users/hjh/Documents/GitHub/DiskRaptor/qt-app/src/ipcbridge.cpp:240:10: error: use of undeclared identifier 'm_drGetResult'
    if (!m_drGetResult) {
         ^
/Users/hjh/Documents/GitHub/DiskRaptor/qt-app/src/ipcbridge.cpp:244:19: error: use of undeclared identifier 'm_drGetResult'
    char* cjson = m_drGetResult();
                  ^
/Users/hjh/Documents/GitHub/DiskRaptor/qt-app/src/ipcbridge.cpp:250:5: error: use of undeclared identifier 'm_drFreeString'
    m_drFreeString(cjson);
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
[9/10] Building CXX object CMakeFiles/DiskRaptor.dir/src/main.cpp.o
ninja: build stopped: subcommand failed.
hjh@Hansjoergs-Mac DiskRaptor % sh build.sh
==========================================
  DiskRaptor - macOS Build
==========================================

[1] Homebrew: Homebrew 6.0.9

[2] Checking tools...
  All tools present

[3] Rust: not found
  Installing Rust...
info: downloading installer
warn: It looks like you have an existing rustup settings file at:
warn: /Users/hjh/.rustup/settings.toml
warn: Rustup will install the default toolchain as specified in the settings file,
warn: instead of the one inferred from the default host triple.
info: profile set to default
info: default host triple is x86_64-apple-darwin
warn: Updating existing toolchain, profile choice will be ignored
info: syncing channel updates for stable-x86_64-apple-darwin
info: default toolchain set to stable-x86_64-apple-darwin

  stable-x86_64-apple-darwin unchanged - rustc 1.97.1 (8bab26f4f 2026-07-14)


Rust is installed now. Great!

To get started you may need to restart your current shell.
This would reload your PATH environment variable to include
Cargo's bin directory ($HOME/.cargo/bin).

To configure your current shell, you need to source
the corresponding env file under $HOME/.cargo.

This is usually done by running one of the following (note the leading DOT):
. "$HOME/.cargo/env"            # For sh/bash/zsh/ash/dash/pdksh
source "$HOME/.cargo/env.fish"  # For fish
source "~/.cargo/env.nu"  # For nushell
source "$HOME/.cargo/env.tcsh"  # For tcsh
. "$HOME/.cargo/env.ps1"        # For pwsh
source "$HOME/.cargo/env.xsh"   # For xonsh

[4] Node: v26.5.0

[5] Building...
  Qt6_DIR: /usr/local/opt/qt/lib/cmake/Qt6
  Rust scanner...
    Finished `release` profile [optimized] target(s) in 0.40s
warning: the following packages contain code that will be rejected by a future version of Rust: block v0.1.6
note: to see what the problems were, use the option `--future-incompat-report`, or run `cargo report future-incompatibilities --id 1`
  Qt app...
[3/3] Linking CXX executable DiskRaptor.app/Contents/MacOS/DiskRaptor
ld: warning: dylib (/usr/local/opt/qt/lib/QtWebEngineWidgets.framework/Versions/A/QtWebEngineWidgets) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtPositioning.framework/Versions/A/QtPositioning) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtWebChannel.framework/Versions/A/QtWebChannel) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtWebEngineCore.framework/Versions/A/QtWebEngineCore) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtPrintSupport.framework/Versions/A/QtPrintSupport) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtWidgets.framework/Versions/A/QtWidgets) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtOpenGL.framework/Versions/A/QtOpenGL) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtQuick.framework/Versions/A/QtQuick) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtGui.framework/Versions/A/QtGui) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtQml.framework/Versions/A/QtQml) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtNetwork.framework/Versions/A/QtNetwork) was built for newer macOS version (14.0) than being linked (13.3)
ld: warning: dylib (/usr/local/opt/qt/lib/QtCore.framework/Versions/A/QtCore) was built for newer macOS version (14.0) than being linked (13.3)

  Creating DiskRaptor.app bundle...
cp: qt-app/build/DiskRaptor: No such 